samples/_failures_safe/1761304882_e86e02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19dd01fd.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_19dd01fd.c:131:16: error: expected declaration or statement at end of input
  131 |                entry->level, entry->message);
      |                ^~~~~
./samples/SAFE/__tmp_19dd01fd.c:131:16: error: expected declaration or statement at end of input
